tests/routes/auth/snapshots/integration__routes__auth__login__login-2.snap
---
source: tests/routes/auth/login.rs
expression: response.json()
---
{
  "created_at": "[datetime]",
  "id": 1,
  "is_server_owner": false,
  "username": "shinei"
}
