tests/routes/auth/snapshots/integration__routes__auth__login__username_case_sensitivity-2.snap
---
source: tests/routes/auth/login.rs
expression: response.json()
---
{
  "created_at": "[datetime]",
  "id": 1,
  "is_server_owner": true,
  "username": "shinei"
}
